--- a/tests/Ardalis.Extensions.UnitTests/Ardalis.Extensions.UnitTests.csproj
+++ b/tests/Ardalis.Extensions.UnitTests/Ardalis.Extensions.UnitTests.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
