--- a/src/Ardalis.Extensions/Ardalis.Extensions.csproj
+++ b/src/Ardalis.Extensions/Ardalis.Extensions.csproj
@@ -28,6 +28,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <PackageReference Include="Ardalis.GuardClauses" Version="3.2.0" />
     <PackageReference Include="System.Text.Json" Version="5.0.2" />
   </ItemGroup>
 </Project>
