--- a/benchmarks/Ardalis.Extensions.Benchmarks/Ardalis.Extensions.Benchmarks.csproj
+++ b/benchmarks/Ardalis.Extensions.Benchmarks/Ardalis.Extensions.Benchmarks.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <OutputType>Exe</OutputType>
   </PropertyGroup>
+  
   <PropertyGroup>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
@@ -12,8 +13,19 @@
     <Configuration>Release</Configuration>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
     <PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.12.1"/>
+  </ItemGroup>
+
+  <ItemGroup>
+        <ProjectReference Include="..\..\src\Ardalis.Extensions\Ardalis.Extensions.csproj" />
+    </ItemGroup>
+
+  <ItemGroup>
+    <None Update="bible.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
